# madmpy

./: .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
data/: ex10-fairsharing.json  ex2-dataset-planned.json
docs/: .readthedocs.yaml  dmp.md  dmp1_0.md  index.md  quickstart.md  release_notes.md
docs/stylesheets/: custom.css
json_dmps/: ex10-fairsharing.json
src/madmpy/: __init__.py  country_code.py  currency_code.py  languages.py
src/madmpy/v1_0/: __init__.py  __init__py  dmp.py
src/madmpy/v1_1/: __init__.py  country_code.py  currency_code.py  dataset.py  dmp.py  languages.py
src/tests/: test_validation.py  test_version.py
